# Clang-Purify

./: .gitignore  CMakeLists.txt  README.md
include/: AssertAssignmentChecker.h  AssertAttributionChecker.h  AstCustomMatchers.h  Checkers.h  ClangDefines.h  ClangParser.h  Config.h  Debug.h  NonInitializedMemberChecker.h  OverrideBaseCallCheck.h  RestrictedOverloadedOperatorChecker.h
src/: AssertAssignmentChecker.cpp  AssertAttributionChecker.cpp  Clang-Purify.cpp  ClangParser.cpp  NonInitializedMemberChecker.cpp  OverrideBaseCallCheck.cpp  OverridebaseCallCheck.cpp  RestrictedOverloadedOperatorChecker.cpp
tests/: TestInitializedMemberChecker.cpp  TestOne.cpp  TestOverrideBaseCall.cpp
